# fix8pro_example

./: CMakeLists.txt  README.md  builder  simpleclisrv.cpp
cmake/: macros.cmake
config/: sample_ref_data.csv  simple_client.xml  simple_server.xml
misc/: builder  clrlogs  log.vim
schema/: FIX42.xml  FIX42_en_phrases.xml  FIX44.xml  FIX44_custom.xml  FIX44_en_phrases_custom.xml  FIX50SP2.xml
src/: marketdata.cpp  simpleclisrv.cpp  simpleclisrv.hpp
